// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component Should match snapshot with different skins 1`] = `
.c0 {
  background-color: #005BA2;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Brand1 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 2`] = `
.c0 {
  background-color: #012C52;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Brand2 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 3`] = `
.c0 {
  background-color: #03a9f4;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Primary 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 4`] = `
.c0 {
  background-color: #647c8a;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Secondary 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 5`] = `
.c0 {
  background-color: #7ed321;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 6`] = `
.c0 {
  background-color: #f09100;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 7`] = `
.c0 {
  background-color: #f4c10b;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 8`] = `
.c0 {
  background-color: #f4365b;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 9`] = `
.c0 {
  background-color: #00dff2;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 1`] = `
.c0 {
  background-color: #03a9f4;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
  Default with text prop
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 2`] = `
.c0 {
  background-color: #03a9f4;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Default with children 
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 3`] = `
.c0 {
  background-color: #03a9f4;
  border-radius: 2px;
  color: #FFFFFF;
  font-size: 12px;
  padding: 2px 4px;
  text-align: center;
}

<div
  className="c0"
>
   
   Default 
   
</div>
`;
